[project]
name = "catalog-schema"
version = "0.1.0"
description = ""
authors = [{ name = "Olivier Banville", email = "olivier@banville.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic (>=2.11.5,<3.0.0)", "pyld[requests] (>=2.0.4,<3.0.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
